--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-3 col-lg-3">
+				<div class="col-xl-3 col-lg-3 col-md-4">
 					<h1>
 						<span>Литературный блог</span><br>Василия Шеин
 					</h1>
 				</div>
-				<div class="col-xl-6 col-lg-8">
+				<div class="col-xl-6 col-lg-8 col-md-7">
 					<nav>
 						<ul>
 							<li><a class="active_menu" href="">Главная</a></li>
@@ -68,7 +68,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-xl-3 col-lg-1">
+				<div class="col-xl-3 col-lg-1 col-md-1">
 					<form class="search">
 						<span class="icon"></span>
 						<input type="search" name="" placeholder="Поиск по сайту">
@@ -80,7 +80,22 @@
 	<section class="all_content">
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-9 col-lg-9">
+				<div class="col-xl-9 col-lg-9 col-md-12">
+					<div class="author_info author_info_ct">
+						<img src="img/shein.png" alt="Фото Василий Шеин">
+						<h3>Уважаемый читатель!</h3>
+						<p>
+							Приветствую! Меня зовут 
+							Василий Шеин, и я писатель. 
+							Пишу в жанрах: детективы, психологические триллеры и мистика. Надеюсь, тебе здесь понравится! ;)
+						</p>
+						<div class="soc">
+							<a href="https://vk.com/" target="_blank"><img src="img/soc/vk.svg" alt="Вконтакте"></a>
+							<a href="https://instagram.com/" target="_blank"><img src="img/soc/instagram.svg" alt="Инстаграм"></a>
+							<a href="https://facebook.com/" target="_blank"><img src="img/soc/facebook.svg" alt="Фэйсбук"></a>
+						</div>
+						<img src="img/signature.png" alt="Подпись автора">
+					</div>
 					<article class="art_post">
 						<img src="img/img_for_post1.png" alt="Картинка для статьи">
 						<div class="date_post"><span>20 апреля 2019</span></div>
@@ -245,26 +260,26 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-4 col-lg-4">
+				<div class="col-xl-4 col-lg-4 col-md-4">
 					<div class="footer_last_publication">
 						<h2>Последние публикации</h2>
 						<ul>
 							<li>
 								<a href="">
-									Особую ценность, на наш взгляд, представляет декодирование непосредственно аллитерирует<i>...</i><span> музыкал...</span>
+									Особую ценность, на наш взгляд, представляет декодирование непосре<b>дственно аллитерирует</b><i>...</i><span> музыкал...</span>
 								</a>
 								<p>21 апреля 2019</p>
 							</li>
 							<li>
 								<a href="">
-									Поэт инстинктивно чувствовал преимущества реального устного<br/> исполнения тех стихов, в котор<i>...</i><span>ых филиац..</span>
+									Поэт инстинктивно чувствовал преимущества реального устного<br/> испо<b>лнения тех стихов, в котор</b><i>...</i><span>ых филиац..</span>
 								</a>
 								<p>20 апреля 2019</p>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4">
+				<div class="col-xl-4 col-lg-4 col-md-4">
 					<div class="sub_email">
 						<h2>Подпишись на обновления</h2>
 						<h3>Узнай первым о новых публикациях<br/> и получи подарок!</h3>
@@ -281,7 +296,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-4 col-lg-4">
+				<div class="col-xl-4 col-lg-4 col-md-4">
 					<div class="blog_info">
 						<h2><span>Литературный блог</span><br>Василия Шеин</h2>
 						<p>Писательской деятельностью начал заниматься с 12 лет. Работал во многих направлениях жанров: мистика и ужасы. Каждый день стараюсь выкладывать по новой главе своей книги “О, этот прекрасный Мир!”
