--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-3 col-lg-3 col-md-4">
+				<div class="col-xl-3 col-lg-3 col-md-4 col-sm-3">
 					<h1>
 						<span>Литературный блог</span><br>Василия Шеин
 					</h1>
 				</div>
-				<div class="col-xl-6 col-lg-8 col-md-7">
+				<div class="col-xl-6 col-lg-8 col-md-7 col-sm-2">
 					<nav>
 						<ul>
 							<li><a class="active_menu" href="">Главная</a></li>
@@ -68,7 +68,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-xl-3 col-lg-1 col-md-1">
+				<div class="col-xl-3 col-lg-1 col-md-1 col-sm-1">
 					<form class="search">
 						<span class="icon"></span>
 						<input type="search" name="" placeholder="Поиск по сайту">
@@ -106,9 +106,9 @@
 						</ul>
 						<h2>10 малоизвестных произведений великих писателей, которые точно стоит прочитать</h2>
 						<p>
-							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются настоящие шедевры, 
+							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются<span> настоящие шедевры, 
 							по неизвестным причинам оставшиеся без внимания массового читателя. Предлагаем восполнить 
-							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.
+							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.</span>
 						</p>
 						<button class="button">Читать далее</button>
 						<ul class="numbers_of_post">
@@ -127,9 +127,9 @@
 						</ul>
 						<h2>10 малоизвестных произведений великих писателей, которые точно стоит прочитать</h2>
 						<p>
-							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются настоящие шедевры, 
+							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются<span> настоящие шедевры, 
 							по неизвестным причинам оставшиеся без внимания массового читателя. Предлагаем восполнить 
-							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.
+							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.</span>
 						</p>
 						<button class="button">Читать далее</button>
 						<ul class="numbers_of_post">
@@ -148,9 +148,9 @@
 						</ul>
 						<h2>10 малоизвестных произведений великих писателей, которые точно стоит прочитать</h2>
 						<p>
-							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются настоящие шедевры, 
+							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются<span> настоящие шедевры, 
 							по неизвестным причинам оставшиеся без внимания массового читателя. Предлагаем восполнить 
-							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.
+							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.</span>
 						</p>
 						<button class="button">Читать далее</button>
 						<ul class="numbers_of_post">
