--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-3 col-lg-3 col-md-4 col-sm-3">
+				<div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6">
 					<h1>
 						<span>Литературный блог</span><br>Василия Шеин
 					</h1>
 				</div>
-				<div class="col-xl-6 col-lg-8 col-md-7 col-sm-2">
+				<div class="col-xl-6 col-lg-8 col-md-7 col-sm-4 col-4">
 					<nav>
 						<ul>
 							<li><a class="active_menu" href="">Главная</a></li>
@@ -68,7 +68,14 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-xl-3 col-lg-1 col-md-1 col-sm-1">
+				<div class="col-xl-3 col-lg-1 col-md-1 col-sm-2 col-2">
+					<form action="" class="search_mobile">
+						<span class="icon_search no_active_search"></span>
+						<div class="search_mobile_active">
+							<span class="icon"></span>
+							<input type="search" name="" placeholder="Поиск по сайту">
+						</div>
+					</form>
 					<form class="search">
 						<span class="icon"></span>
 						<input type="search" name="" placeholder="Поиск по сайту">
@@ -106,7 +113,7 @@
 						</ul>
 						<h2>10 малоизвестных произведений великих писателей, которые точно стоит прочитать</h2>
 						<p>
-							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются<span> настоящие шедевры, 
+							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что<i> прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются</i><span> настоящие шедевры, 
 							по неизвестным причинам оставшиеся без внимания массового читателя. Предлагаем восполнить 
 							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.</span>
 						</p>
@@ -116,6 +123,7 @@
 							<li><a name="comment" href="" style="background-image: url(img/icons/comment.svg)">19</a></li>
 							<li><a name="heart" href="" style="background-image: url(img/icons/heart.svg)">38</a></li>
 						</ul>
+						<button class="button button_320">Читать далее</button>
 					</article>
 					<article class="art_post">
 						<img src="img/img_for_post1.png" alt="Картинка для статьи">
@@ -127,7 +135,7 @@
 						</ul>
 						<h2>10 малоизвестных произведений великих писателей, которые точно стоит прочитать</h2>
 						<p>
-							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются<span> настоящие шедевры, 
+							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что<i> прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются</i><span> настоящие шедевры, 
 							по неизвестным причинам оставшиеся без внимания массового читателя. Предлагаем восполнить 
 							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.</span>
 						</p>
@@ -137,6 +145,7 @@
 							<li><a name="comment" href="" style="background-image: url(img/icons/comment.svg)">19</a></li>
 							<li><a name="heart" href="" style="background-image: url(img/icons/heart.svg)">38</a></li>
 						</ul>
+						<button class="button button_320">Читать далее</button>
 					</article>
 					<article class="art_post">
 						<img src="img/img_for_post1.png" alt="Картинка для статьи">
@@ -148,7 +157,7 @@
 						</ul>
 						<h2>10 малоизвестных произведений великих писателей, которые точно стоит прочитать</h2>
 						<p>
-							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются<span> настоящие шедевры, 
+							Трудно найти образованного человека, который бы не знал имен этих писателей и поэтов. Однако далеко не все любители литературы могут с уверенностью сказать, что<i> прочли все книги известных литераторов. Среди малоизвестных книг именитых писателей встречаются</i><span> настоящие шедевры, 
 							по неизвестным причинам оставшиеся без внимания массового читателя. Предлагаем восполнить 
 							этот пробел и прочесть малоизвестные книги известных писателей из нашего обзора.</span>
 						</p>
@@ -158,6 +167,7 @@
 							<li><a name="comment" href="" style="background-image: url(img/icons/comment.svg)">19</a></li>
 							<li><a name="heart" href="" style="background-image: url(img/icons/heart.svg)">38</a></li>
 						</ul>
+						<button class="button button_320">Читать далее</button>
 					</article>
 				</div>
 				<div class="col-xl-3 col-lg-3">
