--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				</div>
 				<div class="col-xl-3 col-lg-1 col-md-1 col-sm-2 col-2">
 					<form action="" class="search_mobile">
+						<span class="icon_other"></span>
 						<span class="icon_search no_active_search"></span>
 						<div class="search_mobile_active">
 							<span class="icon"></span>
