--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
 							<li><a href="">Контакты</a></li>
 						</ul>
 					</nav>
+					<nav class="nav_mobile">
+						<ul>
+							<li><a href="">Меню</a></li>
+						</ul>
+					</nav>
 				</div>
 				<div class="col-xl-3 col-lg-1 col-md-1 col-sm-2 col-2">
 					<form action="" class="search_mobile">
