--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<ul>
 							<li><a class="active_menu" href="">Главная</a></li>
 							<li class="list_menu">
-								<a href="">Жанры</a>
+								<a href="#">Жанры</a>
 								<ul class="dropdown_menu">
 									<li><a href="">Легенда</a></li>
 									<li><a href="">Новелла</a></li>
@@ -69,7 +69,28 @@
 					</nav>
 					<nav class="nav_mobile">
 						<ul>
-							<li><a href="">Меню</a></li>
+							<li class="list_menu_mobile">
+								<a href="#"><p>Меню</p></a>
+								<ul class="dropdown_menu">
+									<li><a href="">Главная</a></li>
+									<li  class="list_menu_mobile_two">
+										<a href="#">Жанры</a>
+										<ul class="dropdown_menu_two">
+											<li><a href="">Легенда</a></li>
+											<li><a href="">Новелла</a></li>
+											<li><a href="">Очерк</a></li>
+											<li><a href="">Повесть</a></li>
+											<li><a href="">Рассказ</a></li>
+											<li><a href="">Роман</a></li>
+											<li><a href="">Сказка</a></li>
+											<li><a href="">Эпопея</a></li>
+										</ul>
+									</li>
+									<li><a href="">Избранное</a></li>
+									<li><a href="">Новое</a></li>
+									<li><a href="">Контакты</a></li>
+								</ul>
+							</li>
 						</ul>
 					</nav>
 				</div>
@@ -80,11 +101,53 @@
 						<div class="search_mobile_active">
 							<span class="icon"></span>
 							<input type="search" name="" placeholder="Поиск по сайту">
+							<div class="result_search">
+								<h2>Результаты поиска <span>6</span></h2>
+								<div class="result_search_item">
+									<img src="img/result_search.png" alt="">
+									<a href="">
+										<h3>Ямб отражает литературный<br/> поток сознания. Первое<br/> полустишие диссонирует стиль.</h3>
+									</a>
+								</div>
+								<div class="result_search_item">
+									<img src="img/result_search.png" alt="">
+									<a href="">
+										<h3>Ямб отражает литературный<br/> поток сознания. Первое<br/> полустишие диссонирует стиль.</h3>
+									</a>
+								</div>
+								<div class="result_search_item" alt="">
+									<img src="img/result_search.png" alt="">
+									<a href="">
+										<h3>Ямб отражает литературный<br/> поток сознания. Первое<br/> полустишие диссонирует стиль.</h3>
+									</a>
+								</div>
+							</div>
 						</div>
 					</form>
 					<form class="search">
 						<span class="icon"></span>
 						<input type="search" name="" placeholder="Поиск по сайту">
+						<div class="result_search">
+							<h2>Результаты поиска <span>6</span></h2>
+							<div class="result_search_item">
+								<img src="img/result_search.png" alt="">
+								<a href="">
+									<h3>Ямб отражает литературный<br/> поток сознания. Первое<br/> полустишие диссонирует стиль.</h3>
+								</a>
+							</div>
+							<div class="result_search_item">
+								<img src="img/result_search.png" alt="">
+								<a href="">
+									<h3>Ямб отражает литературный<br/> поток сознания. Первое<br/> полустишие диссонирует стиль.</h3>
+								</a>
+							</div>
+							<div class="result_search_item" alt="">
+								<img src="img/result_search.png" alt="">
+								<a href="">
+									<h3>Ямб отражает литературный<br/> поток сознания. Первое<br/> полустишие диссонирует стиль.</h3>
+								</a>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
