--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="row">
 				<div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6">
 					<h1>
-						<span>Литературный блог</span><br>Василия Шеин
+						<a href=""><span>Литературный блог</span><br>Василия Шеин</a>
 					</h1>
 				</div>
 				<div class="col-xl-6 col-lg-8 col-md-7 col-sm-4 col-4">
@@ -188,9 +188,9 @@
 						</p>
 						<a href="articles/article_1.html" class="button">Читать далее</a>
 						<ul class="numbers_of_post">
-							<li><a name="eye" href="" style="background-image: url(img/icons/eye.svg)">234</a></li>
-							<li><a name="comment" href="" style="background-image: url(img/icons/comment.svg)">19</a></li>
-							<li><a name="heart" href="" style="background-image: url(img/icons/heart.svg)">38</a></li>
+							<li><a name="eye" style="background-image: url(img/icons/eye.svg)">234</a></li>
+							<li><a name="comment" style="background-image: url(img/icons/comment.svg)">19</a></li>
+							<li><a name="heart" style="background-image: url(img/icons/heart.svg)">38</a></li>
 						</ul>
 						<a href="articles/article_1.html" class="button button_320">Читать далее</a>
 					</article>
@@ -210,9 +210,9 @@
 						</p>
 						<a href="articles/article_1.html" class="button">Читать далее</a>
 						<ul class="numbers_of_post">
-							<li><a name="eye" href="" style="background-image: url(img/icons/eye.svg)">234</a></li>
-							<li><a name="comment" href="" style="background-image: url(img/icons/comment.svg)">19</a></li>
-							<li><a name="heart" href="" style="background-image: url(img/icons/heart.svg)">38</a></li>
+							<li><a name="eye" style="background-image: url(img/icons/eye.svg)">234</a></li>
+							<li><a name="comment" style="background-image: url(img/icons/comment.svg)">19</a></li>
+							<li><a name="heart" style="background-image: url(img/icons/heart.svg)">38</a></li>
 						</ul>
 						<a href="articles/article_1.html" class="button button_320">Читать далее</a>
 					</article>
@@ -232,9 +232,9 @@
 						</p>
 						<a href="articles/article_1.html" class="button">Читать далее</a>
 						<ul class="numbers_of_post">
-							<li><a name="eye" href="" style="background-image: url(img/icons/eye.svg)">234</a></li>
-							<li><a name="comment" href="" style="background-image: url(img/icons/comment.svg)">19</a></li>
-							<li><a name="heart" href="" style="background-image: url(img/icons/heart.svg)">38</a></li>
+							<li><a name="eye" style="background-image: url(img/icons/eye.svg)">234</a></li>
+							<li><a name="comment" style="background-image: url(img/icons/comment.svg)">19</a></li>
+							<li><a name="heart" style="background-image: url(img/icons/heart.svg)">38</a></li>
 						</ul>
 						<a href="articles/article_1.html" class="button button_320">Читать далее</a>
 					</article>
